# 42cursus-push_swap

./: .editorconfig  .gitignore  .pre-commit-config.yaml  42cursus-push_swap.sln  42cursus-push_swap.vcxproj  42cursus-push_swap.vcxproj.filters  CMakeLists.txt  CMakePresets.json  Makefile
include/: push_swap.h
libft/: .gitignore  CMakeLists.txt  Makefile
libft/docs/: DETAILS.md  README.md
libft/include/: ft_printf.h  get_next_line.h  libft.h
libft/src/: ft_atoi.c  ft_atol.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstpop_back.c  ft_lstpop_front.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_puthnbr.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_putunbr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  (+11 more)
libft/src/ft_printf/: core.c  ft_printf_internal.h  hexadecimal.c  integer.c  parser.c  string.c  utils.c
libft/src/get_next_line/: get_next_line.c  get_next_line_utils.c
libft/tests/: .test_ft_atoi.c  .test_ft_atol.c  .test_ft_bzero.c  .test_ft_calloc.c  .test_ft_isalnum.c  .test_ft_isalpha.c  .test_ft_isascii.c  .test_ft_isdigit.c  .test_ft_islower.c  .test_ft_isprint.c  .test_ft_isspace.c  .test_ft_isupper.c  .test_ft_itoa.c  .test_ft_lstadd_back.c  .test_ft_lstadd_front.c  .test_ft_lstclear.c  .test_ft_lstdelone.c  .test_ft_lstiter.c  .test_ft_lstlast.c  .test_ft_lstmap.c  .test_ft_lstnew.c  .test_ft_lstpop_back.c  .test_ft_lstpop_front.c  .test_ft_lstsize.c  .test_ft_memchr.c  .test_ft_memcmp.c  .test_ft_memcpy.c  .test_ft_memmove.c  .test_ft_memset.c  .test_ft_putchar_fd.c  .test_ft_putendl_fd.c  .test_ft_puthnbr_fd.c  .test_ft_putnbr.c  .test_ft_putstr_fd.c  .test_ft_putunbr_fd.c  .test_ft_split.c  .test_ft_strchr.c  .test_ft_strdup.c  .test_ft_striteri.c  .test_ft_strjoin.c  (+14 more)
libft/tests/data/get_next_line/: test2.txt  test2_alt.txt
libft/tests/ft_printf/: .test_ft_printf.c
libft/tests/get_next_line/: .test_gnl_clear_buffer.c  .test_gnl_get_buffer.c  .test_gnl_get_line.c  .test_gnl_get_next_line.c  .test_gnl_line_realloc.c
src/: argparser.c  push.c  push_swap.c  rev_rotate.c  rotate.c  sort_engine.c  stack.c  stack2.c  stack3.c  stack_operations.c  swap.c
tests/: .test_argparser.c  .test_main.c  .test_operations_frontend.c  .test_stack.c  .test_stack_handling.c  .test_stack_operations.c  .tests.c  CMakeLists.txt
